force-app/main/default/objects/NEST_Team_Connection__c/NEST_Team_Connection__c.object-meta.xml
<CustomObject>
    <description>Compiles data related to the NEST savings plan</description>
    <label>NEST Team Connection</label>
    <nameField>
        <displayFormat>NTC-{00000}</displayFormat>
        <label>NEST Team Connection Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>NEST Team Connections</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>