force-app/main/default/objects/NEST_Team_Connection__c/fields/Ascensus_Dealer_Name__c.field-meta.xml
<CustomField>
    <fullName>Ascensus_Dealer_Name__c</fullName>
    <formula>NEST_Ascensus_Team_Record__r.Ascensus_Team_Dealer_Name__c</formula>
    <label>Ascensus Dealer Name</label>
    <type>Text</type>
</CustomField>