force-app/main/default/objects/NEST_Team_Connection__c/fields/Ascensus_Rep_City__c.field-meta.xml
<CustomField>
    <fullName>Ascensus_Rep_City__c</fullName>
    <formula>NEST_Ascensus_Team_Record__r.Ascensus_Team_Rep_City__c</formula>
    <label>Ascensus Rep City</label>
    <type>Text</type>
</CustomField>