force-app/main/default/objects/NEST_Team_Connection__c/fields/Ascensus_Team_As_of_Date__c.field-meta.xml
<CustomField>
    <fullName>Ascensus_Team_As_of_Date__c</fullName>
    <formula>NEST_Ascensus_Team_Record__r.Ascensus_Team_As_of_Date__c</formula>
    <label>Ascensus Team As of Date</label>
    <type>Date</type>
</CustomField>