force-app/main/default/objects/NEST_Team_Connection__c/fields/Ascesus_Rep_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Ascesus_Rep_Full_Name__c</fullName>
    <formula>NEST_Ascensus_Team_Record__r.Ascensus_Team_Rep_Full_Name__c</formula>
    <label>Ascesus Rep Full Name</label>
    <type>Text</type>
</CustomField>