force-app/main/default/objects/NEST_Team_Connection__c/fields/NEST_Contact_Record__c.field-meta.xml
<CustomField>
    <fullName>NEST_Contact_Record__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>NEST Contact Record</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>NEST Team Connections</relationshipLabel>
    <relationshipName>NEST_Team_Connections</relationshipName>
    <type>Lookup</type>
</CustomField>